[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Júnior Bassani <junior.eduardo.bassani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
itertools = "0.10.0"
ndarray = "0.14.0"
